--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/gwcStocks/bin-int
+/gwcStocks/bin
+/gwcStocks/*.sln
+/gwcStocks/gwcStocks/*.vcxproj
