--- a/gwcStocks/gwcStocks/gwcStocks.vcxproj.filters
+++ b/gwcStocks/gwcStocks/gwcStocks.vcxproj.filters
@@ -7,6 +7,15 @@
     <Filter Include="src\Core">
       <UniqueIdentifier>{A5D31CCF-91A0-77DA-BAB9-6582A6E5AC68}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\DataExchanges">
+      <UniqueIdentifier>{6C6E865E-D884-84F4-21FC-0F168D51557C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\DataExchanges\Finnhub">
+      <UniqueIdentifier>{8519098B-F1DB-3C15-3A8C-CBA1A68D15F3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Events">
+      <UniqueIdentifier>{7162C20E-5D1A-045C-C621-DDB7B2F89E4C}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\StockObjects">
       <UniqueIdentifier>{0AF76EF2-F6EF-8D44-1F22-73C90B7A6D50}</UniqueIdentifier>
     </Filter>
@@ -44,6 +53,15 @@
     </ClInclude>
     <ClInclude Include="src\Core\URLData.h">
       <Filter>src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DataExchanges\Finnhub\FinnHub.h">
+      <Filter>src\DataExchanges\Finnhub</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Events\Event.h">
+      <Filter>src\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Events\EventCallback.h">
+      <Filter>src\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\StockObjects\Symbol.h">
       <Filter>src\StockObjects</Filter>
@@ -524,6 +542,12 @@
     <ClCompile Include="src\Core\URLData.cpp">
       <Filter>src\Core</Filter>
     </ClCompile>
+    <ClCompile Include="src\Events\Event.cpp">
+      <Filter>src\Events</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Events\EventCallback.cpp">
+      <Filter>src\Events</Filter>
+    </ClCompile>
     <ClCompile Include="src\StockObjects\Symbol.cpp">
       <Filter>src\StockObjects</Filter>
     </ClCompile>
@@ -533,5 +557,6 @@
     <ClCompile Include="src\gwcStocks.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\DataExchanges\Finnhub\FinnHub.cpp" />
   </ItemGroup>
 </Project>
