Added GetCompanyProfile2 and an object to Deserialise the result (CompanyProfile)

--- a/FinnHub/FinnHub/FinnHub.vcxproj.filters
+++ b/FinnHub/FinnHub/FinnHub.vcxproj.filters
@@ -530,6 +530,7 @@
     </ClInclude>
     <ClInclude Include="src\Core\JSON.h" />
     <ClInclude Include="src\StockObjects\Symbol.h" />
+    <ClInclude Include="src\StockObjects\CompanyProfile.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\URLData.cpp">
