Added GetNews method and a FinnHub::News object to deserialise the data.

--- a/FinnHub/FinnHub/FinnHub.vcxproj
+++ b/FinnHub/FinnHub/FinnHub.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="src\StockObjects\Candle.h" />
     <ClInclude Include="src\gepch.h" />
     <ClInclude Include="src\StockObjects\CompanyProfile.h" />
+    <ClInclude Include="src\StockObjects\News.h" />
     <ClInclude Include="src\StockObjects\Symbol.h" />
     <ClInclude Include="vendor\curl\include\curl\curl.h" />
     <ClInclude Include="vendor\curl\include\curl\curlver.h" />
